--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&family=Finger+Paint&family=Shizuru&display=swap" rel="stylesheet" />
-  <title>{{ title | "the web site of gurolizard" }}</title>
+  <title>{{ title | default: "the web site of gurolizard" }}</title>
   <link href="/style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
