--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -15,7 +15,7 @@
   <main>
     {{ content }}
   </main>
-  <footer>source on <a href="https://github.com/gurolizard/neocities">github</a> | <a
+  <footer>made with 🔪 | source on <a href="https://github.com/gurolizard/neocities">github</a> | <a
       href="https://github.com/gurolizard/neocities/blob/main/LICENSE.md">license</a></footer>
 </body>
 
