move css, edit homepage wording

--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&family=Finger+Paint&family=Shizuru&display=swap" rel="stylesheet" />
   <title>{{ title | default: "the web site of gurolizard" }}</title>
-  <link href="/style.css" rel="stylesheet" type="text/css" media="all">
+  <link href="/assets/global.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
 <body>
