--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&family=Finger+Paint&family=Shizuru&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&family=Finger+Paint&family=Shizuru&family=Mina&display=swap" rel="stylesheet" />
   <title>{{ title | default: "the web site of gurolizard" }}</title>
   <link href="/assets/global.css" rel="stylesheet" type="text/css" media="all">
 </head>
