--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -175,6 +175,131 @@ iframe {
   display: block;
 }
 
+
+
+.hidden {
+  display: none;
+}
+
+/* source: https://webaim.org/techniques/css/invisiblecontent/ */
+.sr-only {
+  position:absolute;
+  left:-10000px;
+  top:auto;
+  width:1px;
+  height:1px;
+  overflow:hidden;
+}
+
+.freezeframe, .ff-image {
+  vertical-align: unset;
+  margin: unset;
+}
+
+
+
+
+/* settings menu */
+
+#settings {
+  position:fixed;
+  top: 5px;
+  right: 0px;
+  z-index:1000;
+  background-color: transparent;
+}
+
+#settings[open] {
+background-color: var(--color-bg-second);
+  color: var(--color-text-primary);
+  width: fit-content;
+  padding: 1rem 2rem;
+  border: solid 3px var(--color-accent-2);
+  border-right: 0;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  text-align: center;
+  max-height: calc(100vh - 10px);
+  overflow: auto;
+  z-index: 900;
+}
+
+#settings-toggle {
+  list-style-type: none;
+  cursor: pointer;
+  display:flex;
+  align-items:center;
+}
+
+#settings-toggle::before {
+  width: 38px;
+  height: 38px;
+  background-color:var(--color-accent-1);
+  background-image: url(/assets/img/settings.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 32px 32px;
+  content: '';
+  border: solid 2px var(--color-accent-2);
+  border-right: 0;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+
+}
+
+#settings-toggle::-webkit-details-marker {
+  display: none;
+}
+
+#settings[open] > summary {
+  display: block;
+  text-align: right;
+}
+
+#settings[open] > summary::before {
+  content: 'close';
+  text-decoration: underline;
+  height: fit-content;
+  color: var(--color-text-primary);
+  z-index: 1000;
+  background: none;
+  border: 0;
+}
+
+#settings-menu h2 {
+  font-size: 1rem;
+  font-family: var(--font-main);
+  font-weight: bold;
+  color: var(--color-text-second);
+  margin-top: 0.5rem;
+}
+
+#settings-menu a {
+  color: var(--color-text-second);
+}
+
+.settings-button {
+  display: block;
+  background-color: transparent;
+  color: var(--color-text-second);
+  text-decoration: underline;
+  cursor: pointer;
+  border: 0;
+  margin: 1rem auto 0;
+}
+
+#settings-menu span, #settings-menu label {
+  display: block;
+}
+
+#settings-menu label {
+  margin-top: 1rem;
+}
+
+
+
+/* home page */
+
 .toots {
   list-style-type: none;
   font-size: 85%;
@@ -189,6 +314,8 @@ a.user {
   height: 100px;
   width: auto;
 }
+
+
 
 
 /* media queries */
