--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -7,16 +7,20 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&family=Finger+Paint&family=Shizuru&family=Mina&display=swap" rel="stylesheet" />
-  <title>{{ title | default: "the web site of gurolizard" }}</title>
-  <link href="/assets/global.css" rel="stylesheet" type="text/css" media="all">
+  <script src="https://unpkg.com/freezeframe/dist/freezeframe.min.js"></script>
+  <link href="/assets/css/global.css" rel="stylesheet" type="text/css" media="all">
+  <title>{{ title | default("the web site of gurolizard") }}</title>
 </head>
 
 <body>
+  {% include 'comp/settings.html' %}
   <main>
-    {{ content }}
+    {{ content | safe }}
   </main>
   <footer>made with 🔪 | source on <a href="https://github.com/gurolizard/neocities">github</a> | <a
       href="https://github.com/gurolizard/neocities/blob/main/LICENSE.md">license</a></footer>
+  <script src="/assets/js/settings.js" defer></script>
+  <script src="/assets/js/freezeframe.js" defer></script>
 </body>
 
 </html>
