i continue to dfk

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -4,10 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&family=Finger+Paint&family=Shizuru&family=Mina&display=swap" rel="stylesheet" />
   <script src="https://unpkg.com/freezeframe/dist/freezeframe.min.js"></script>
+  <script src="/assets/js/freezeframe.js"></script>
   <link href="/assets/css/global.css" rel="stylesheet" type="text/css" media="all">
   <title>{{ title | default("the web site of gurolizard") }}</title>
 </head>
@@ -20,7 +22,6 @@
   <footer>made with 🔪 | source on <a href="https://github.com/gurolizard/neocities">github</a> | <a
       href="https://github.com/gurolizard/neocities/blob/main/LICENSE.md">license</a></footer>
   <script src="/assets/js/settings.js" defer></script>
-  <script src="/assets/js/freezeframe.js" defer></script>
 </body>
 
 </html>
