--- a/src/_includes/comp/settings.html
+++ b/src/_includes/comp/settings.html
@@ -6,6 +6,8 @@
         <button id="play-gif" class="settings-button">play GIFs</button>
         <button id="stop-gif" class="settings-button">stop GIFs</button>
 
+        <p>theme choices coming soon maybe?? idfk</p>
+
         <!-- <button class="settings-button">disable hover-to-zoom</button> -->
 
         <!--
