--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -19,7 +19,7 @@
   <main>
     {{ content | safe }}
   </main>
-  <footer>made with 🔪 | source on <a href="https://github.com/gurolizard/neocities">github</a> | <a
+  <footer>made with 🔪 | source on <a href="https://github.com/gurolizard/neocities">github</a> | <a href="/site#credits">credits</a> | <a
       href="https://github.com/gurolizard/neocities/blob/main/LICENSE.md">license</a></footer>
   <script src="/assets/js/settings.js" defer></script>
 </body>
