--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -107,7 +107,7 @@ main {
   margin: auto;  
   max-width: 80ch;
   flex-grow: 1;
-  padding: 1.5rem;
+  padding: 0 1.5rem;
 }
 
 section {
@@ -115,7 +115,6 @@ section {
 }
 
 h1, h2, h3 {
-  text-align: center;
   font-family: var(--font-accent-1);
   font-weight: normal;
   margin: 1rem;
@@ -124,7 +123,12 @@ h1, h2, h3 {
 h1 {
   font-family: var(--font-accent-2);
   font-size: 270%;
-  margin: 2rem;
+  margin-bottom: 2rem;
+}
+
+h2.title {
+  font-family: var(--font-accent-2);
+  font-size: 220%;
 }
 
 details {
@@ -189,7 +193,7 @@ iframe {
 
 .centered {
   text-align: center;
-  margin: auto;
+  margin: unset auto;
 }
 
 .margin-bottom-2rem {
@@ -309,6 +313,10 @@ background-color: var(--color-bg-second);
   color: var(--color-text-primary);
 }
 
+#settings-menu p {
+  color: var(--color-text-second);
+}
+
 .settings-button {
   display: block;
   background-color: transparent;
@@ -339,6 +347,7 @@ background-color: var(--color-bg-second);
   display: block;
 }
 
+/* styles from uhh emfed or smth 
 .toots {
   list-style-type: none;
   font-size: 85%;
@@ -346,7 +355,7 @@ background-color: var(--color-bg-second);
 
 a.user {
   display: none;
-}
+} */
 
 .big-emoji {
   display: inline;
