--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -111,7 +111,7 @@ main {
 }
 
 section {
-  margin: 2rem 1rem;
+  margin: 1rem 1rem 2rem;
 }
 
 h1, h2, h3 {
@@ -143,9 +143,23 @@ a {
  color: var(--color-accent-1); 
 }
 
+header h1 {
+  border-bottom: double 3px var(--color-text-primary);
+  font-size: 350%;
+  text-align: center;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+header a {
+  text-decoration: none;
+  color: inherit;
+}
+
 footer {
   font-size: 85%;
-  margin: 2rem auto 0;
+  margin: 2rem auto 1rem;
   text-align: center;
 }
 
@@ -154,7 +168,9 @@ iframe {
   display: block;
 }
 
-
+.title {
+  margin-top: 0;
+}
 
 .buttons {
   display: flex;
@@ -381,7 +397,7 @@ a.user {
     width: 30ch;
   }
 
-  main {
+  main.home {
     max-width: 100%;
   }
 }
